--- a/templates/contato.html
+++ b/templates/contato.html
@@ -10,20 +10,26 @@
         <section class='form'>
             <form>
                 <fieldset>
-                    <div> 
-                        <label>Nome</label>
+                    <div class='inputbox'> 
                         <input type='text' name='nome' id='nome' required>
+                        <label for='nome'>Nome</label>
                     </div>  
 
-                    <div> 
-                        <label>Email</label>
-                        <input type='email' name='email' id='email' required>
-                    </div>
+                    <br>
 
                     <div class='inputbox'> 
-                        <label>Data de nascimento</label>
-                        <input type='date' name='nascimento' id='nascimento' class='inputUser' required>
+                        <input type='email' name='email' id='email' required>
+                        <label for='email'>Email</label>
                     </div>
+
+                    <br>
+
+                    <div class='inputbox'> 
+                        <input type='date' name='nascimento' id='nascimento' class='inputUser' required>
+                        <label for='nascimento'>Data de nascimento</label>
+                    </div>
+
+                    <br>
 
                     <div>
                         <label>Sexo:</label>
@@ -46,6 +52,8 @@
                         <input type="radio" id='PJ' name='tipo' value='PJ' required>
                         <label for='PJ' >Sou fornecedor</label>
                     </div>
+
+                    <br>
 
                     <div>
                         <label>Descrição:</label>
