--- a/static/css/style.css
+++ b/static/css/style.css
@@ -327,6 +327,11 @@ footer h1{
     color: #444;
 }
 
+.container-input{
+    display: flex;
+    gap: 50px;
+}
+
 .button-contato{
     width: 10%;
     height: 15%;
