--- a/templates/contato.html
+++ b/templates/contato.html
@@ -8,7 +8,7 @@
         <p>Entre encontato para dúvidas, sugestões ou agendamentos</p>
 
         <section class='form'>
-            <form>
+            <form method='POST' action='/contato'>
                 <fieldset>
                     <div class='inputbox'> 
                         <input type='text' name='nome' id='nome' required>
@@ -24,9 +24,18 @@
 
                     <br>
 
-                    <div class='inputbox'> 
-                        <input type='date' name='nascimento' id='nascimento' class='inputUser' required>
-                        <label for='nascimento'>Data de nascimento</label>
+                    <div class='container-input'>
+                        <div class='inputbox'> 
+                            <input type='text' name='number' id='number' required>
+                            <label for='number'>Telefone</label>
+                        </div>
+
+                        <br>
+
+                        <div class='inputbox'> 
+                            <input type='date' name='nascimento' id='nascimento' class='inputUser' required>
+                            <label for='nascimento'>Data de nascimento</label>
+                        </div>
                     </div>
 
                     <br>
