--- a/templates/base.html
+++ b/templates/base.html
@@ -66,9 +66,11 @@
                     <h1>Redes Sociais</h1>
 
                     <!--icons-->
-                    <a class="fa fa-facebook" href='https://www.facebook.com/profile.php?id=100017005422744'></a>
-                    <a class="fa fa-instagram" href='https://www.instagram.com/vitorsss__/'></a>
-                    <a class="fa fa-linkedin" href='https://www.linkedin.com/in/victor-hugo-barbosa-souza-116b81178/'></a>
+                    <div class='icons'>
+                        <a class="fa fa-facebook" href='https://www.facebook.com/profile.php?id=100017005422744'></a>
+                        <a class="fa fa-instagram" href='https://www.instagram.com/vitorsss__/'></a>
+                        <a class="fa fa-linkedin" href='https://www.linkedin.com/in/victor-hugo-barbosa-souza-116b81178/'></a>
+                    </div>
                 </div>
             </div>
     
