--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,11 @@
     border-radius: 2%;
 }
 
+.nav-responsiva{
+    display: none;
+
+}
+
 /* ##################### dropdown ######################### */
 .dropdown:hover .dropdown-menu {
     display: block;
@@ -65,6 +70,17 @@
 .dropdown-menu li a:hover {
     background-color: var(--backgroud-button);
     color: var(--text-color1);;
+}
+
+.mobile-menu{
+    cursor: pointer;
+    display: none;
+}
+.mobile-menu div{
+    height: 2px;
+    width: 32px;
+    background: #fff ;
+    margin: 8px;
 }
 
 
@@ -354,6 +370,10 @@ footer h1{
 
     /* ########### navbar ########## */
 
+    .container-itens{
+        display: none;
+    }
+
     /* ########### footer ######### */
     footer{
         padding: 15px;
@@ -406,21 +426,31 @@ footer h1{
     /* ########### buttons img ########### */
     
     .container-img-button{
-        margin-left: 30px;
-        padding: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
         width: 250px;
+        margin-bottom: 20px;
     }
 
-    .container-img-index h1, p{
-        margin-left: 20px;
+    .container-img-button h1, .container-img-button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin: 0;
     }
 
     .container-img-index{
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center; 
+        flex-direction: column; 
+        text-align: center; 
     }
 
     .imagens-index{
-        margin-left: 20px;
         width: 150px;
         height: auto;
     }
@@ -480,9 +510,20 @@ footer h1{
         width: 90%;
     }
 
- 
+    .button-contato{
+        width: 80px;
+    }
 
+    .container-itens{
+        position: absolute;
+        top: 8vh;
+        right: 0;
+        width: 50vw;
+        height: 92vh;
+        background: var(--text-color1);
+        color: var(--backgroud-button);
+        flex-direction: column;
 
-
-
+    }
 }
+
