adicionando area do admin

--- a/templates/contato.html
+++ b/templates/contato.html
@@ -78,6 +78,8 @@
                 </fieldset>
             </form> 
         </section>
+
+        <button class='button-contato'><a href='/admin'>Area do Admin</a></button>
     </div>
 </main>
 {% endblock %}
