--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,10 @@
     --backgroud-button: #dadada;
 }
 
+html{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 /* ###################### navbar ################### */
 .navbar {
     background-color: var(--primary-color);
@@ -349,9 +353,9 @@ footer h1{
 }
 
 .button-contato{
-    width: 10%;
-    height: 15%;
+
     margin-top: 3%;
+    padding: 1% 3%;
     color: var(--background-color);
     background-color: var(--primary-color);
     border-radius: 2%;
@@ -363,6 +367,124 @@ footer h1{
 .button-contato:hover{
     opacity: 0.7;
 }
+
+/* ########## LOGIN ############# */
+
+.admin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background: linear-gradient(135deg, var(--secondary-color), var(--primary-color));
+    font-family: Arial, sans-serif;
+}
+.admin main {
+    background: var(--backgroud-button);
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+fieldset.login {
+    border: none;
+}
+.login div {
+    margin-bottom: 1rem;
+}
+.login div label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+}
+input[type="text"] {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: border-color 0.3s, box-shadow 0.3s;
+}
+input[type="text"]:focus {
+    border-color: var(--primary-color);
+    box-shadow: 0 0 5px var(--)(155, 89, 182, 0.5);
+}
+
+
+  .wrapper{
+    position: fixed;
+    top: 10%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .link_wrapper{
+    position: relative;
+  }
+  
+  .wrapper a{
+    display: block;
+    width: 250px;
+    height: 50px;
+    line-height: 50px;
+    font-weight: bold;
+    text-decoration: none;
+    background: #333;
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border: 3px solid #333;
+    transition: all .35s;
+  }
+  
+  .icon{
+    width: 50px;
+    height: 50px;
+    border: 3px solid transparent;
+    position: absolute;
+    transform: rotate(45deg);
+    right: 0;
+    top: 0;
+    z-index: -1;
+    transition: all .35s;
+  }
+  
+  .icon svg{
+    width: 30px;
+    position: absolute;
+    top: calc(50% - 15px);
+    left: calc(50% - 15px);
+    transform: rotate(-45deg);
+    fill: var(--primary-color);
+    transition: all .35s;
+  }
+  
+  a:hover{
+    width: 200px;
+    border: 3px solid var(--primary-color);
+    background: transparent;
+    color: var(--primary-color);
+  }
+  
+  a:hover + .icon{
+    border: 3px solid var(--primary-color);
+    right: -25%;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ################## Responsividade ################## */
 
