--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,7 +98,7 @@ footer {
 
 .container-footer{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 footer h1{
@@ -227,6 +227,11 @@ footer h1{
 .container-img-button:hover {
     transform: translateY(-10px);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.container-img-button h1{
+    display: flex;
+    justify-content: center;
 }
 
 .imagens-index {
@@ -396,31 +401,31 @@ fieldset.login {
     margin-bottom: 0.5rem;
     font-weight: bold;
 }
-input[type="text"] {
+.login div input[type="text"] {
     width: 100%;
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
     transition: border-color 0.3s, box-shadow 0.3s;
 }
-input[type="text"]:focus {
+.login div input[type="text"]:focus {
     border-color: var(--primary-color);
     box-shadow: 0 0 5px var(--)(155, 89, 182, 0.5);
 }
 
 
-  .wrapper{
+.wrapper{
     position: fixed;
     top: 10%;
     left: 15%;
     transform: translate(-50%, -50%);
-  }
+}
   
-  .link_wrapper{
+.link_wrapper{
     position: relative;
-  }
+}
   
-  .wrapper a{
+.wrapper a{
     display: block;
     width: 250px;
     height: 50px;
@@ -434,9 +439,9 @@ input[type="text"]:focus {
     letter-spacing: 1px;
     border: 3px solid #333;
     transition: all .35s;
-  }
+}
   
-  .icon{
+.icon{
     width: 50px;
     height: 50px;
     border: 3px solid transparent;
@@ -446,9 +451,9 @@ input[type="text"]:focus {
     top: 0;
     z-index: -1;
     transition: all .35s;
-  }
+}
   
-  .icon svg{
+.icon svg{
     width: 30px;
     position: absolute;
     top: calc(50% - 15px);
@@ -456,24 +461,50 @@ input[type="text"]:focus {
     transform: rotate(-45deg);
     fill: var(--primary-color);
     transition: all .35s;
-  }
+}
   
-  a:hover{
+.wrapper a:hover{
     width: 200px;
     border: 3px solid var(--primary-color);
     background: transparent;
     color: var(--primary-color);
-  }
+}
   
-  a:hover + .icon{
+.wrapper a:hover + .icon{
     border: 3px solid var(--primary-color);
     right: -25%;
-  }
+}
 
 
+/*################ Admin ################*/
 
+.nav-adm{
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    margin: 25px 50px 25px;
+}
 
+.nav-adm ul li a{
+    text-decoration: none;
+    list-style: none;
+}
 
+.nav-adm ul li{
+    gap:50px ;
+}
+
+.container-admin div h1{
+    padding: 3%;
+    display: flex;
+    justify-content: center;
+}
+
+.container-footer-adm, .container-footer-adm h1{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
 
 
 
