login request for clientes, fornecedores and agenda

--- a/templates/contato.html
+++ b/templates/contato.html
@@ -26,8 +26,8 @@
 
                     <div class='container-input'>
                         <div class='inputbox'> 
-                            <input type='text' name='number' id='number' required>
-                            <label for='number'>Telefone</label>
+                            <input type='text' name='telefone' id='telefone' required>
+                            <label for='telefone'>Telefone</label>
                         </div>
 
                         <br>
